fix : itemobject inventory comp GC problem solved

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/Untitled.Untitled
 GlobalDefaultGameMode=/Game/GameState/BP_CMainGM.BP_CMainGM_C
+EditorStartupMap=/Game/Levels/Untitled.Untitled
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
