--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Levels/Untitled.Untitled
 GlobalDefaultGameMode=/Game/GameState/BP_CMainGM.BP_CMainGM_C
 EditorStartupMap=/Game/Levels/Untitled.Untitled
+GameInstanceClass=/Script/BODYCREDIT.NetGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
