feaet : refresh lootable box and pause to selection menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Levels/Untitled.Untitled
 GlobalDefaultGameMode=/Game/GameState/BP_CMainGM.BP_CMainGM_C
 EditorStartupMap=/Game/Levels/Untitled.Untitled
-GameInstanceClass=/Script/BODYCREDIT.NetGameInstance
+GameInstanceClass=/Game/GameState/BP_NetGameInstance.BP_NetGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
