--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Untitled.Untitled
+GameDefaultMap=/Game/Levels/Lab.Lab
 GlobalDefaultGameMode=/Game/GameState/BP_CMainGM.BP_CMainGM_C
-EditorStartupMap=/Game/Levels/Untitled.Untitled
+EditorStartupMap=/Game/Levels/Lab.Lab
 GameInstanceClass=/Game/GameState/BP_NetGameInstance.BP_NetGameInstance_C
 
 [/Script/Engine.RendererSettings]
