버전업, 튜토리얼 레벨 작업중

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0D895D1A47B77A83E402CAA9144B88A7
+ProjectVersion=1.0.0.1
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
