플레이어 활 수정

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -200,3 +200,6 @@ CategoryRowNextKey=Equals
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/BODYCREDIT.CWeapon_AK47",NewName="/Script/BODYCREDIT.CWeapon_LMG")
